alloy-config: feat - improve log collection and labeling in nomad jobs
- Add "log" tag to traefik job for better log identification
- Simplify and standardize log label names across alloy configurations
- Replace local file matching with consul-based discovery for nomad logs
- Add task_id and service_name labels for better log correlation

--- a/TerraformWorkShop/Quadlet/alloy/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/alloy/attachments/values-sololab.yaml
@@ -65,19 +65,15 @@ alloy:
           rule.0:
             source_labels:
               - '"__journal__systemd_unit"'
-            target_label: '"systemd_unit"'
+            target_label: '"service_name"'
           rule.1:
             source_labels:
               - '"__journal__systemd_user_unit"'
-            target_label: '"systemd_user_unit"'
+            target_label: '"service_name"'
           rule.2:
             source_labels:
               - '"__journal__hostname"'
-            target_label: '"systemd_hostname"'
-          rule.3:
-            source_labels:
-              - '"__journal__transport"'
-            target_label: '"systemd_transport"'
+            target_label: '"host"'
       - component: loki.write
         label: loki
         attributes:
