fix: enable raw_exec plugin and improve curl retry logic
- Enable raw_exec plugin in nomad.yaml for additional execution capabilities
- Add --location flag to curl in SyncTo-Dufs.ps1 to follow redirects
- Increase retry attempts from 5 to 20 for Vault and Consul health checks

--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
@@ -112,6 +112,12 @@ storage:
             }
           }
 
+          plugin "raw_exec" {
+            config {
+              enabled = true
+            }
+          }
+
           plugin_dir = "/opt/bin"
 
           vault {
