pgbouncer-deploy-nomad-job: feat - add consul-template integration for dynamic db config
- Add consul-template logic to pgbouncer.ini for dynamic database configuration
- Update nomad job constraints and template settings for better reliability
- Configure podman network settings in FCOS for DNS resolution

--- a/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
+++ b/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
@@ -2,6 +2,15 @@
 [databases]
 * = host=localhost port=5432
 
+{{-/* https://github.com/hashicorp/consul-template/issues/1552 */}}
+{{- range services }}
+{{- range service .Name }}
+{{- if (contains "behind_pgbouncer" .Tags) }}
+{{ index .ServiceMeta "dbName" }} = {{ index .ServiceMeta "dbConfig" }}
+{{- end }}
+{{- end }}
+{{- end }}
+
 [pgbouncer]
 listen_addr = 0.0.0.0
 listen_port = 6432
