chore: update hashicorp components and zot to latest versions
- Update Consul from 1.22.0 to 1.22.1 across multiple files
- Update Nomad from 1.11.0 to 1.11.1 in various configurations
- Switch zot image from quay.io/giantswarm to ghcr.io/project-zot v2.1.11
- Add new alpine-jq image to Day0.jsonc

--- a/LocalWorkShop/Sync-OCIImage/Day0.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.jsonc
@@ -77,6 +77,13 @@
         "description": "https://hub.docker.com/r/hashicorp/vault/tags",
     },
     {
+        "publicRegistry": "docker.io",
+        "publicRepo": "apteno/alpine-jq:2025-11-23",
+        "archive": "docker.io_apteno_alpine-jq_2025-11-23.tar",
+        "privateRepo": "apteno/alpine-jq:latest",
+        "description": "https://hub.docker.com/r/apteno/alpine-jq/tags",
+    },
+    {
         "publicRegistry": "quay.io",
         "publicRepo": "minio/minio:RELEASE.2025-04-22T22-12-26Z",
         "archive": "quay.io_minio_minio_RELEASE.2025-04-22T22-12-26Z.tar",
