coredns-deploy-podman-kube: refactor - comment out unused forward rules in sololab config
The forward rules for 'consul' and '.' domains are no longer needed in the sololab environment, so they have been commented out to clean up the configuration while preserving them for potential future use.

--- a/TerraformWorkShop/Quadlet/coredns/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/coredns/attachments/values-sololab.yaml
@@ -81,10 +81,10 @@ coredns:
           parameters: node.consul 192.168.255.20
         - name: forward
           parameters: service.consul 192.168.255.20
-        - name: forward
-          parameters: consul 192.168.255.20
-        - name: forward
-          parameters: . 192.168.255.20
+        # - name: forward
+        #   parameters: consul 192.168.255.20
+        # - name: forward
+        #   parameters: . 192.168.255.20
   # zoneFiles:
   #   - filename: day0.sololab.db
   #     domain: day0.sololab
