--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/consul.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/consul.yaml
@@ -8,7 +8,7 @@ storage:
     # consul config dir
     - path: /etc/consul.d
     # consul data dir
-    - path: /var/lib/consul
+    - path: "${consul_data_dir}"
   files:
     - path: /opt/bin/consul_${consul_version}_linux_amd64.zip
       mode: 0644
@@ -28,7 +28,7 @@ storage:
           }
           bind_addr = "{{ GetInterfaceIP \"eth0\" }}"
           client_addr = "127.0.0.1"
-          data_dir = "/var/lib/consul"
+          data_dir = "${consul_data_dir}"
           encrypt = "${consul_encrypt_key}"
           ports {
             https = 8501
@@ -80,7 +80,7 @@ systemd:
           Requires=prepare-consul-binary.service
           ConditionFileNotEmpty=/opt/bin/consul
           ConditionFileNotEmpty=/etc/consul.d/consul.hcl
-          ConditionPathIsDirectory=/var/lib/consul
+          ConditionPathIsDirectory=${consul_data_dir}
 
           [Service]
           ExecStart=/opt/bin/consul agent \
