--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
@@ -8,12 +8,12 @@ storage:
     # nomad config dir
     - path: /etc/nomad.d
     # nomad data dir
-    - path: /var/lib/nomad
-  # dont use symlink for data_dir
+    - path: "${nomad_data_dir}"
+  # dont use symlink for data_dir， but need a fixed path for log correction tools
   # https://discuss.hashicorp.com/t/cant-read-allocation-logs-path-escapes-the-alloc-directory/72841/2
-  # links:
-  #   - path: /var/lib/nomad
-  #     target: /var/mnt/data/nomad
+  links:
+    - path: /var/lib/nomad
+      target: "${nomad_data_dir}"
   files:
     - path: /opt/bin/nomad_${nomad_version}_linux_amd64.zip
       mode: 0644
@@ -58,7 +58,7 @@ storage:
             token = "${nomad_consul_acl_token}"
           }
 
-          data_dir           = "/var/lib/nomad"
+          data_dir           = "${nomad_data_dir}"
           leave_on_interrupt = true
           leave_on_terminate = true
 
@@ -172,7 +172,7 @@ systemd:
 
         ConditionFileNotEmpty=/opt/bin/nomad
         ConditionFileNotEmpty=/etc/nomad.d/nomad.hcl
-        ConditionPathIsDirectory=/var/lib/nomad
+        ConditionPathIsDirectory=${nomad_data_dir}
 
         [Service]
         # https://developer.hashicorp.com/nomad/commands#environment-variables
