traefik-deploy-nomad-job: refactor - update file paths and configuration for nomad deployment
- Change TLS certificate paths from /etc/traefik/tls to /secrets/tls
- Update dynamic config directory from /etc/traefik/dynamic to /local/routing
- Modify template destinations and volume mounts for better container compatibility
- Add explicit configFile command for traefik startup

--- a/TerraformWorkShop/Nomad/Jobs/traefik/attachments/install.traefik.yml
+++ b/TerraformWorkShop/Nomad/Jobs/traefik/attachments/install.traefik.yml
@@ -47,9 +47,9 @@ providers:
     exposedByDefault: false
     useBindPortIP: false
   file:
-    directory: /etc/traefik/dynamic
+    directory: /local/routing
     watch: true
 serversTransport:
   insecureSkipVerify: false
   rootCAs:
-    - /etc/traefik/tls/ca.crt
+    - /secrets/tls/ca.crt
