pgbouncer-deploy-nomad-job: fix - update auth file path and improve password hashing
- Change auth_file path from /etc/pgbouncer/userlist.txt to /secrets/userlist.txt
- Update password hashing format to include username in MD5 calculation
- Modify nomad job configuration to use correct entrypoint and command
- Add documentation references in comments
- Clean up formatting in documentation files

--- a/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
+++ b/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
@@ -1,4 +1,5 @@
 ; https://github.com/pgbouncer/pgbouncer/blob/pgbouncer_1_25_1/etc/pgbouncer.ini
+{{- /* https://www.enterprisedb.com/postgres-tutorials/pgbouncer-authquery-and-authuser-pro-tips */}}
 [databases]
 * = host=localhost port=5432
 
@@ -15,5 +16,5 @@
 listen_addr = 0.0.0.0
 listen_port = 6432
 auth_type = md5
-auth_file = /etc/pgbouncer/userlist.txt
+auth_file = /secrets/userlist.txt
 admin_users = pgbouncer
