podman-ops-network: fix - update enable-podname-network-dns.service to set Type and make it auto start

--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
@@ -140,7 +140,11 @@ systemd:
         Before=nomad.service
 
         [Service]
+        Type=oneshot
         ExecStart=/bin/bash -c "/usr/bin/podman network inspect podman | jq '.[] | del(.containers) | .dns_enabled = true' > /etc/containers/networks/podman.json"
+
+        [Install]
+        WantedBy=multi-user.target
     - name: prepare-nomad-binary.service
       enabled: true
       contents: |
