fix(pgbouncer): add auth_query for user authentication and update password hashing method

--- a/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
+++ b/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
@@ -16,5 +16,6 @@
 listen_addr = 0.0.0.0
 listen_port = 6432
 auth_type = md5
+auth_query = SELECT usename, passwd FROM user_search($1)
 auth_file = /secrets/userlist.txt
 admin_users = pgbouncer
