pgbouncer-config: fix - update authentication method to scram-sha-256 and adjust user configuration

--- a/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
+++ b/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
@@ -15,7 +15,11 @@
 [pgbouncer]
 listen_addr = 0.0.0.0
 listen_port = 6432
-auth_type = md5
-auth_query = SELECT usename, passwd FROM user_search($1)
+
+auth_user = pgbouncer
 auth_file = /secrets/userlist.txt
+
+auth_type = scram-sha-256
+auth_query = SELECT usename, passwd FROM user_search($1)
+
 admin_users = pgbouncer
