Update container images and versions across multiple configurations
- Updated Grafana Loki from version 3.5.8 to 3.6.3 in Day1 and Day2 configurations.
- Updated Grafana from version 12.3.0 to 12.3.1 in multiple configurations and dashboards.
- Updated HashiCorp Consul from version 1.22.1 to 1.22.2 in various configurations.
- Updated Traefik from version 3.6.2 to 3.6.5 in multiple configurations.
- Updated PowerDNS Auth from version 5.0.1 to 5.0.2 in VyOS configurations.
- Updated PostgreSQL from version 16:20251203 to 16:20251217 in configurations.
- Updated Alpine jq from version 2025-11-23 to 2025-12-14 in Day1 configuration.
- Updated various references in documentation and configuration files to reflect new versions.

--- a/LocalWorkShop/Sync-OCIImage/Day2.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day2.jsonc
@@ -8,9 +8,9 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "library/traefik:v3.6.2",
-        "archive": "docker.io_library_traefik_v3.6.2.tar",
-        "privateRepo": "library/traefik:v3.6.2",
+        "publicRepo": "library/traefik:v3.6.5",
+        "archive": "docker.io_library_traefik_v3.6.5.tar",
+        "privateRepo": "library/traefik:v3.6.5",
         "description": "https://hub.docker.com/r/library/traefik/tags",
     },
     {
@@ -43,16 +43,16 @@
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "fedora/postgresql-16:20251203",
-        "archive": "quay.io_fedora_postgresql-16_20251203.tar",
-        "privateRepo": "fedora/postgresql-16:20251203",
+        "publicRepo": "fedora/postgresql-16:20251217",
+        "archive": "quay.io_fedora_postgresql-16_20251217.tar",
+        "privateRepo": "fedora/postgresql-16:20251217",
         "description": "https://quay.io/repository/fedora/postgresql-16?tab=tags",
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "library/redis:8.4.0-alpine",
-        "archive": "docker.io_library_redis_8.4.0-alpine.tar",
-        "privateRepo": "library/redis:8.4.0-alpine",
+        "publicRepo": "library/redis:8.4.0",
+        "archive": "docker.io_library_redis_8.4.0.tar",
+        "privateRepo": "library/redis:8.4.0",
         "description": "https://hub.docker.com/_/redis",
     },
     {
