--- a/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
+++ b/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
@@ -23,3 +23,6 @@ auth_type = scram-sha-256
 auth_query = SELECT usename, passwd FROM user_search($1)
 
 admin_users = pgbouncer
+
+# https://intellij-support.jetbrains.com/hc/en-us/community/posts/115000063944/comments/115000441430
+ignore_startup_parameters = extra_float_digits
