--- a/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
+++ b/TerraformWorkShop/Nomad/Jobs/pgbouncer/attachments/pgbouncer.ini
@@ -26,3 +26,8 @@ admin_users = pgbouncer
 
 # https://intellij-support.jetbrains.com/hc/en-us/community/posts/115000063944/comments/115000441430
 ignore_startup_parameters = extra_float_digits
+
+client_tls_sslmode = require
+client_tls_ca_file = /secrets/tls/ca.crt
+client_tls_cert_file = /secrets/tls/consul.crt
+client_tls_key_file = /secrets/tls/consul.key
