fix: update HCL formatter in VSCode settings and add traffic path comments in Traefik job

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,7 +37,7 @@
     "editor.defaultFormatter": "DotJoshJohnson.xml"
   },
   "[hcl]": {
-    "editor.defaultFormatter": "twiking.vscode-hcl-format"
+    "editor.defaultFormatter": "fredwangwang.vscode-hcl-format"
   },
   "[markdown]": {
     "editor.defaultFormatter": "yzhang.markdown-all-in-one"
