redis-deploy-podman-kube: re-factor gitea tf resource, update helm value according to new helm chart structure

--- a/LocalWorkShop/Sync-OCIImage/Day1.deprecated.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day1.deprecated.jsonc
@@ -31,4 +31,11 @@
         "privateRepo": "bitnami/blackbox-exporter:0.26.0",
         "description": "https://hub.docker.com/r/bitnami/blackbox-exporter/tags",
     },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "library/redis:8.4.0",
+        "archive": "docker.io_library_redis_8.4.0.tar",
+        "privateRepo": "library/redis:8.4.0",
+        "description": "https://hub.docker.com/_/redis",
+    },
 ]
