redis-insight-deploy-podman-kube: feat - add redis-insight service configuration and update Terraform files

--- a/TerraformWorkShop/Quadlet/redis-insight/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/redis-insight/attachments/values-sololab.yaml
@@ -1,11 +1,9 @@
 global:
   imageRegistry: zot.day0.sololab
 redisInsight:
-  containerPorts: []
-  config:
-    RI_SERVER_TLS_CERT: /tls/server.crt
-    RI_SERVER_TLS_KEY: /tls/server.key
-    RI_ENCRYPTION_KEY: somepassword
+  secret:
+    envVars:
+      RI_ENCRYPTION_KEY: somepassword
 
   podLabels:
     traefik.enable: true
@@ -19,6 +17,4 @@ redisInsight:
     traefik.http.routers.redisInsight.tls: true
     traefik.http.routers.redisInsight.service: redisInsight
 
-    traefik.http.services.redisInsight.loadBalancer.serversTransport: redis-insight@file
-    traefik.http.services.redisInsight.loadbalancer.server.scheme: https
     traefik.http.services.redisInsight.loadbalancer.server.port: 5540
